# e-bike-inverter

./: .gitignore  CMakeLists.txt  conanfile.py  readme.md
.helix/: languages.toml
batterycharger/: .mxproject
cmake/: version.hpp.in
hardware/: .gitignore
hardware/raspi-hat/: .gitignore  _autosave-raspi-hat.kicad_sch  bom.xlsx  controller.kicad_sch  inverter.kicad_sch  place.xlsx  power-supply.kicad_sch  raspi-hat.kicad_pcb  raspi-hat.kicad_pro  raspi-hat.kicad_sch  shunt-amp.kicad_sch  stspin_3V.kicad_sch  ~raspi-hat.kicad_sch.lck
hardware/raspi-hat/ul_STSPIN32G4/KiCADv6/: 2025-12-01_20-40-26.kicad_sym
hardware/raspi-hat/ul_STSPIN32G4/KiCADv6/footprints.pretty/: QFN_IN32G4_STM-L.kicad_mod  QFN_IN32G4_STM-M.kicad_mod  QFN_IN32G4_STM.kicad_mod
software/: .gitignore  CMakeLists.txt  conanfile.py
software/docs/: ntc.ipynb
software/src/: isr.cpp  main.cpp  main.hpp  syscalls.cpp
software/src/bsp/: CMakeLists.txt  can-interface.cpp  core.hpp  hall-sensors.hpp  inverter.cpp  uart-interface.cpp
software/src/hal/: CMakeLists.txt
software/src/hal/Drivers/: hal.ioc
software/src/hal/Drivers/Core/Inc/: main.h  opamp.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
software/src/hal/Drivers/Core/Src/: adc.c  dma.c  fdcan.c  fmac.c  gpio.c  i2c.c  main.c  opamp.c  stm32g4xx_it.c  tim.c  usart.c
src/: CMakeLists.txt  batterycharger.cpp  batterycharger.h  isr.cpp  linker.ld  main.cpp  main.hpp  motor.hpp  syscalls.c
src/batterycharger/cmake/stm32cubemx/: CMakeLists.txt
src/bsp/: CMakeLists.txt  can-interface.hpp  core.cpp  core.hpp  hal-sensors.cpp  hal-sensors.hpp  hall-sensors.cpp  hall-sensors.hpp  inverter.cpp  inverter.hpp  motor.hpp  uart-interface.cpp  uart-interface.hpp
src/hal/: CMakeLists.txt  batterycharger.ioc  conanfile.py
src/hal/Core/Inc/: main.h
src/hal/Drivers/: CMakeLists.txt  batterycharger.ioc
src/hal/Drivers/CMSIS/: CMakeLists.txt
src/hal/Drivers/Core/Inc/: main.h  opamp.h  stm32g4xx_it.h
src/hal/Drivers/Core/Src/: adc.c  cordic.c  main.c  opamp.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  system_stm32g4xx.c  tim.c
src/hal/Drivers/STM32G4xx_HAL_Driver/: CMakeLists.txt
test_package/: conanfile.py
